exports[`invalid(1): {\"types\": \"./index.d.ts\", \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": "./index.js"}

`;

exports[`invalid(1): {\"types\": \"./index.d.ts\", \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": "./index.js"}
    |                                      ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(10): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": null, "default": "./index.js"}}

`;

exports[`invalid(10): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": null, "default": "./index.js"}}
    |                       ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(10): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": null, "default": "./index.js"}}
    |                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(11): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": true, "default": "./index.js"}}

`;

exports[`invalid(11): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": true, "default": "./index.js"}}
    |                       ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(11): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": true, "default": "./index.js"}}
    |                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(12): {\"exports\": {\"types\": false, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": false, "default": "./index.js"}}

`;

exports[`invalid(12): {\"exports\": {\"types\": false, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": false, "default": "./index.js"}}
    |                       ^^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(12): {\"exports\": {\"types\": false, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": false, "default": "./index.js"}}
    |                                         ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(13): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "", "default": "./index.js"}}

`;

exports[`invalid(13): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "", "default": "./index.js"}}
    |                       ^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(13): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": "", "default": "./index.js"}}
    |                                      ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(14): {\"exports\": {\"types\": [\"\", \"./index.d.ts\"], \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": ["", "./index.d.ts"], "default": "./index.js"}}

`;

exports[`invalid(14): {\"exports\": {\"types\": [\"\", \"./index.d.ts\"], \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": ["", "./index.d.ts"], "default": "./index.js"}}
    |                       ^^^^^^^^^^^^^^^^^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(14): {\"exports\": {\"types\": [\"\", \"./index.d.ts\"], \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": ["", "./index.d.ts"], "default": "./index.js"}}
    |                                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(15): {\"exports\": {\"types\": {\"import\": \"./index.d.ts\", \"browser\": \"./not-a-declaration.js\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": "./index.d.ts", "browser": "./not-a-declaration.js"}, "import": "./index.js"}}

`;

exports[`invalid(15): {\"exports\": {\"types\": {\"import\": \"./index.d.ts\", \"browser\": \"./not-a-declaration.js\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": "./index.d.ts", "browser": "./not-a-declaration.js"}, "import": "./index.js"}}
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^ The \`types\` condition \`./not-a-declaration.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(16): {\"exports\": {\"types\": {\"default\": \"./legacy.d.ts\", \"types@>=5\": \"./modern.d.ts\"}, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"default": "./legacy.d.ts", "types@>=5": "./modern.d.ts"}, "default": "./index.js"}}

`;

exports[`invalid(16): {\"exports\": {\"types\": {\"default\": \"./legacy.d.ts\", \"types@>=5\": \"./modern.d.ts\"}, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"default": "./legacy.d.ts", "types@>=5": "./modern.d.ts"}, "default": "./index.js"}}
    |                                                    ^^^^^^^^^^^ Type conditions must come before runtime conditions in a conditions object.

`;

exports[`invalid(17): {\"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.ts\"}, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"types": null, "default": "./fallback.d.ts"}, "default": "./index.js"}}

`;

exports[`invalid(17): {\"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.ts\"}, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"types": null, "default": "./fallback.d.ts"}, "default": "./index.js"}}
    |                                 ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(18): {\"exports\": {\"types\": [null, \"./index.d.ts\"], \"default\": [\"./index.js\", \"./fallback.js\"]}} 1`] = `

[Input]
  1 | {"exports": {"types": [null, "./index.d.ts"], "default": ["./index.js", "./fallback.js"]}}

`;

exports[`invalid(18): {\"exports\": {\"types\": [null, \"./index.d.ts\"], \"default\": [\"./index.js\", \"./fallback.js\"]}} 2`] = `

Message:
> 1 | {"exports": {"types": [null, "./index.d.ts"], "default": ["./index.js", "./fallback.js"]}}
    |                       ^^^^^^^^^^^^^^^^^^^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(18): {\"exports\": {\"types\": [null, \"./index.d.ts\"], \"default\": [\"./index.js\", \"./fallback.js\"]}} 3`] = `

Message:
> 1 | {"exports": {"types": [null, "./index.d.ts"], "default": ["./index.js", "./fallback.js"]}}
    |                                                           ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(19): {\"exports\": {\"types\": {\"import\": [null, \"./index.d.ts\"], \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": [null, "./index.d.ts"], "default": "./fallback.d.ts"}, "import": "./index.js"}}

`;

exports[`invalid(19): {\"exports\": {\"types\": {\"import\": [null, \"./index.d.ts\"], \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": [null, "./index.d.ts"], "default": "./fallback.d.ts"}, "import": "./index.js"}}
    |                                                                                                   ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(2): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"typings": "./index.d.ts", "exports": {".": "./index.js"}}

`;

exports[`invalid(2): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"typings": "./index.d.ts", "exports": {".": "./index.js"}}
    |                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(20): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [null, \"./index.d.mts\"], \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [null, "./index.d.mts"], "default": "./fallback.d.cts"}, "import": "./index.js"}}

`;

exports[`invalid(20): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [null, \"./index.d.mts\"], \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [null, "./index.d.mts"], "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                                                                                       ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(21): {\"exports\": {\"types\": {\"import\": {\"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}

`;

exports[`invalid(21): {\"exports\": {\"types\": {\"import\": {\"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}
    |                                                                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(22): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}

`;

exports[`invalid(22): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}
    |                                                                                                                                    ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(23): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}

`;

exports[`invalid(23): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}
    |                                                                                                                           ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(24): {\"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"node": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}

`;

exports[`invalid(24): {\"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"node": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}
    |                                                                                                    ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(25): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": {\"node\": \"./index.mjs\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"node": null}, "default": "./fallback.d.cts"}, "import": {"node": "./index.mjs"}}}

`;

exports[`invalid(25): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": {\"node\": \"./index.mjs\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"node": null}, "default": "./fallback.d.cts"}, "import": {"node": "./index.mjs"}}}
    |                                                                                                                       ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(26): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": "./index.mjs"}}

`;

exports[`invalid(26): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": "./index.mjs"}}
    |                                         ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(27): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": {"node": "./node.js", "browser": "./browser.js"}}}

`;

exports[`invalid(27): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": {"node": "./node.js", "browser": "./browser.js"}}}
    |                                         ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(28): {\"type\": \"module\", \"exports\": {\"types@>=5\": \"./index.d.cts\", \"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types@>=5": "./index.d.cts", "types": "./index.d.cts", "default": "./index.mjs"}}

`;

exports[`invalid(28): {\"type\": \"module\", \"exports\": {\"types@>=5\": \"./index.d.cts\", \"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types@>=5": "./index.d.cts", "types": "./index.d.cts", "default": "./index.mjs"}}
    |                                             ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(28): {\"type\": \"module\", \"exports\": {\"types@>=5\": \"./index.d.cts\", \"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 3`] = `

Message:
> 1 | {"type": "module", "exports": {"types@>=5": "./index.d.cts", "types": "./index.d.cts", "default": "./index.mjs"}}
    |                                                                       ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(29): {\"type\": \"commonjs\", \"exports\": {\"types\": \"./index.d.mts\", \"default\": \"./index.cjs\"}} 1`] = `

[Input]
  1 | {"type": "commonjs", "exports": {"types": "./index.d.mts", "default": "./index.cjs"}}

`;

exports[`invalid(29): {\"type\": \"commonjs\", \"exports\": {\"types\": \"./index.d.mts\", \"default\": \"./index.cjs\"}} 2`] = `

Message:
> 1 | {"type": "commonjs", "exports": {"types": "./index.d.mts", "default": "./index.cjs"}}
    |                                           ^^^^^^^^^^^^^^^ Type declaration \`./index.d.mts\` uses ES module format but its JavaScript target uses CommonJS format.

`;

exports[`invalid(3): {\"exports\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./index.js", "types": "./index.d.ts"}}

`;

exports[`invalid(3): {\"exports\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./index.js", "types": "./index.d.ts"}}
    |                                       ^^^^^^^ Type conditions must come before runtime conditions in a conditions object.

`;

exports[`invalid(30): {\"exports\": {\"types\": \"./index.d.ts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.d.ts", "default": "./index.mjs"}}

`;

exports[`invalid(30): {\"exports\": {\"types\": \"./index.d.ts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.d.ts", "default": "./index.mjs"}}
    |                       ^^^^^^^^^^^^^^ Type declaration \`./index.d.ts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(31): {\"exports\": {\".\": {\"types\": \"./index.d.ts\", \"default\": \"./index.js\"}, \"./feature\": \"./feature.js\"}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./index.d.ts", "default": "./index.js"}, "./feature": "./feature.js"}}

`;

exports[`invalid(31): {\"exports\": {\".\": {\"types\": \"./index.d.ts\", \"default\": \"./index.js\"}, \"./feature\": \"./feature.js\"}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./index.d.ts", "default": "./index.js"}, "./feature": "./feature.js"}}
    |                                                                                    ^^^^^^^^^^^^^^ Exported JavaScript target \`./feature.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(32): {\"types\": \"./index.d.ts\", \"exports\": [{\"default\": \"./index.js\"}, {\"types\": \"./index.d.ts\"}]} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": [{"default": "./index.js"}, {"types": "./index.d.ts"}]}

`;

exports[`invalid(32): {\"types\": \"./index.d.ts\", \"exports\": [{\"default\": \"./index.js\"}, {\"types\": \"./index.d.ts\"}]} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": [{"default": "./index.js"}, {"types": "./index.d.ts"}]}
    |                                                   ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(33): {\"types\": \"./index.d.ts\", \"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": \"./index.cjs\"}} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": "./index.cjs"}}

`;

exports[`invalid(33): {\"types\": \"./index.d.ts\", \"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": \"./index.cjs\"}} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": "./index.cjs"}}
    |                                                                                                                  ^^^^^^^^^^^^^ Exported JavaScript target \`./index.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(34): {\"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": {\"default\": \"./index.cjs\"}}} 1`] = `

[Input]
  1 | {"exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": {"default": "./index.cjs"}}}

`;

exports[`invalid(34): {\"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": {\"default\": \"./index.cjs\"}}} 2`] = `

Message:
> 1 | {"exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": {"default": "./index.cjs"}}}
    |                                                                                                     ^^^^^^^^^^^^^ Exported JavaScript target \`./index.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(35): {\"exports\": {\"types\": {\"import\": \"./import.d.ts\"}, \"import\": \"./import.js\", \"require\": \"./require.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": "./import.d.ts"}, "import": "./import.js", "require": "./require.js"}}

`;

exports[`invalid(35): {\"exports\": {\"types\": {\"import\": \"./import.d.ts\"}, \"import\": \"./import.js\", \"require\": \"./require.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": "./import.d.ts"}, "import": "./import.js", "require": "./require.js"}}
    |                                                                                        ^^^^^^^^^^^^^^ Exported JavaScript target \`./require.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(36): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": \"./import.d.cts\", \"require\": \"./require.d.cts\"}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": "./import.d.cts", "require": "./require.d.cts"}, "import": "./import.mjs", "require": "./require.cjs"}}

`;

exports[`invalid(36): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": \"./import.d.cts\", \"require\": \"./require.d.cts\"}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": "./import.d.cts", "require": "./require.d.cts"}, "import": "./import.mjs", "require": "./require.cjs"}}
    |                                                    ^^^^^^^^^^^^^^^^ Type declaration \`./import.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(37): {\n\t\"exports\": {\n\t\t\"types@>=5.2\": {\"import\": \"./import.d.ts\"},\n\t\t\"types@>=4.7\": {\"require\": \"./require.d.ts\"},\n\t\t\"import\": \"./import.js\",\n\t\t\"require\": \"./require.js\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"exports": {
  3 | 		"types@>=5.2": {"import": "./import.d.ts"},
  4 | 		"types@>=4.7": {"require": "./require.d.ts"},
  5 | 		"import": "./import.js",
  6 | 		"require": "./require.js"
  7 | 	}
  8 | }

`;

exports[`invalid(37): {\n\t\"exports\": {\n\t\t\"types@>=5.2\": {\"import\": \"./import.d.ts\"},\n\t\t\"types@>=4.7\": {\"require\": \"./require.d.ts\"},\n\t\t\"import\": \"./import.js\",\n\t\t\"require\": \"./require.js\"\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"exports": {
  3 | 		"types@>=5.2": {"import": "./import.d.ts"},
  4 | 		"types@>=4.7": {"require": "./require.d.ts"},
> 5 | 		"import": "./import.js",
    | 		          ^^^^^^^^^^^^^ Exported JavaScript target \`./import.js\` has no corresponding \`types\` condition.
  6 | 		"require": "./require.js"
  7 | 	}
  8 | }

`;

exports[`invalid(37): {\n\t\"exports\": {\n\t\t\"types@>=5.2\": {\"import\": \"./import.d.ts\"},\n\t\t\"types@>=4.7\": {\"require\": \"./require.d.ts\"},\n\t\t\"import\": \"./import.js\",\n\t\t\"require\": \"./require.js\"\n\t}\n} 3`] = `

Message:
  1 | {
  2 | 	"exports": {
  3 | 		"types@>=5.2": {"import": "./import.d.ts"},
  4 | 		"types@>=4.7": {"require": "./require.d.ts"},
  5 | 		"import": "./import.js",
> 6 | 		"require": "./require.js"
    | 		           ^^^^^^^^^^^^^^ Exported JavaScript target \`./require.js\` has no corresponding \`types\` condition.
  7 | 	}
  8 | }

`;

exports[`invalid(38): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.mts\"}, \"default\": \"./fallback.d.cts\"}, \"import\": {\"browser\": \"./browser.mjs\", \"node\": \"./node.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"browser": "./browser.d.mts"}, "default": "./fallback.d.cts"}, "import": {"browser": "./browser.mjs", "node": "./node.js"}}}

`;

exports[`invalid(38): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.mts\"}, \"default\": \"./fallback.d.cts\"}, \"import\": {\"browser\": \"./browser.mjs\", \"node\": \"./node.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"browser": "./browser.d.mts"}, "default": "./fallback.d.cts"}, "import": {"browser": "./browser.mjs", "node": "./node.js"}}}
    |                                                                                               ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(39): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"default\": \"./index.d.cts\"}}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"default": "./index.d.cts"}}, "import": "./index.js"}}

`;

exports[`invalid(39): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"default\": \"./index.d.cts\"}}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"default": "./index.d.cts"}}, "import": "./index.js"}}
    |                                                                ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(4): {\"exports\": {\"default\": \"./index.mjs\", \"types@>=5\": \"./index.d.mts\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./index.mjs", "types@>=5": "./index.d.mts"}}

`;

exports[`invalid(4): {\"exports\": {\"default\": \"./index.mjs\", \"types@>=5\": \"./index.d.mts\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./index.mjs", "types@>=5": "./index.d.mts"}}
    |                                        ^^^^^^^^^^^ Type conditions must come before runtime conditions in a conditions object.

`;

exports[`invalid(40): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": \"./fallback.d.cts\"}, \"import\": \"./import.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": "./fallback.d.cts"}, "import": "./import.js"}}

`;

exports[`invalid(40): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": \"./fallback.d.cts\"}, \"import\": \"./import.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": "./fallback.d.cts"}, "import": "./import.js"}}
    |                                                                   ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(41): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": \"./fallback.d.cts\"}}, \"import\": \"./import.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": "./fallback.d.cts"}}, "import": "./import.js"}}

`;

exports[`invalid(41): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": \"./fallback.d.cts\"}}, \"import\": \"./import.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": "./fallback.d.cts"}}, "import": "./import.js"}}
    |                                                                              ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(42): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"node\": \"./fallback.d.cts\"}}, \"import\": {\"node\": \"./node.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": {"node": "./fallback.d.cts"}}, "import": {"node": "./node.js"}}}

`;

exports[`invalid(42): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"node\": \"./fallback.d.cts\"}}, \"import\": {\"node\": \"./node.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": {"node": "./fallback.d.cts"}}, "import": {"node": "./node.js"}}}
    |                                                                            ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(43): {\"type\": \"module\", \"exports\": {\"types\": {\"types@>=5\": [], \"types\": {\"import\": \"./import.d.mts\", \"require\": \"./require.d.cts\"}}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"types@>=5": [], "types": {"import": "./import.d.mts", "require": "./require.d.cts"}}, "import": "./import.mjs", "require": "./require.cjs"}}

`;

exports[`invalid(43): {\"type\": \"module\", \"exports\": {\"types\": {\"types@>=5\": [], \"types\": {\"import\": \"./import.d.mts\", \"require\": \"./require.d.cts\"}}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"types@>=5": [], "types": {"import": "./import.d.mts", "require": "./require.d.cts"}}, "import": "./import.mjs", "require": "./require.cjs"}}
    |                                                       ^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(44): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types@>=5\": \"./index.d.mts\", \"default\": \"./index.d.cts\"}}, \"import\": {\"import\": \"./index.mjs\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"types@>=5": "./index.d.mts", "default": "./index.d.cts"}}, "import": {"import": "./index.mjs"}}}

`;

exports[`invalid(44): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types@>=5\": \"./index.d.mts\", \"default\": \"./index.d.cts\"}}, \"import\": {\"import\": \"./index.mjs\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"types@>=5": "./index.d.mts", "default": "./index.d.cts"}}, "import": {"import": "./index.mjs"}}}
    |                                                                                              ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(45): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"types@>=5\": \"./modern.d.mts\", \"default\": \"./legacy.d.cts\"}}, \"import\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": {"types@>=5": "./modern.d.mts", "default": "./legacy.d.cts"}}, "import": "./index.mjs"}}

`;

exports[`invalid(45): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"types@>=5\": \"./modern.d.mts\", \"default\": \"./legacy.d.cts\"}}, \"import\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": {"types@>=5": "./modern.d.mts", "default": "./legacy.d.cts"}}, "import": "./index.mjs"}}
    |                                                                                                              ^^^^^^^^^^^^^^^^ Type declaration \`./legacy.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(46): {\"type\": \"module\", \"exports\": {\"types\": {\"types\": {\"browser\": \"./browser.d.mts\"}, \"default\": \"./fallback.d.cts\"}, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"types": {"browser": "./browser.d.mts"}, "default": "./fallback.d.cts"}, "default": "./index.js"}}

`;

exports[`invalid(46): {\"type\": \"module\", \"exports\": {\"types\": {\"types\": {\"browser\": \"./browser.d.mts\"}, \"default\": \"./fallback.d.cts\"}, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"types": {"browser": "./browser.d.mts"}, "default": "./fallback.d.cts"}, "default": "./index.js"}}
    |                                                                                              ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(47): {\"exports\": {\"types\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "browser": "./browser.js"}}}

`;

exports[`invalid(47): {\"exports\": {\"types\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "browser": "./browser.js"}}}
    |                                                                                                       ^^^^^^^^^^^^^^ Exported JavaScript target \`./browser.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(48): {\"exports\": {\"types@>=5\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types@>=5": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "browser": "./browser.js"}}}

`;

exports[`invalid(48): {\"exports\": {\"types@>=5\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types@>=5": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "browser": "./browser.js"}}}
    |                                                                                                           ^^^^^^^^^^^^^^ Exported JavaScript target \`./browser.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(49): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": {\"node\": \"./fallback.d.cts\"}}}, \"import\": {\"node\": \"./node.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": {"node": "./fallback.d.cts"}}}, "import": {"node": "./node.js"}}}

`;

exports[`invalid(49): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": {\"node\": \"./fallback.d.cts\"}}}, \"import\": {\"node\": \"./node.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": {"node": "./fallback.d.cts"}}}, "import": {"node": "./node.js"}}}
    |                                                                                       ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(5): {\"exports\": {\"types@>=5\": \"./index.d.ts\", \"default\": \"./index.js\", \"types@>=4\": \"./index.d.ts\"}} 1`] = `

[Input]
  1 | {"exports": {"types@>=5": "./index.d.ts", "default": "./index.js", "types@>=4": "./index.d.ts"}}

`;

exports[`invalid(5): {\"exports\": {\"types@>=5\": \"./index.d.ts\", \"default\": \"./index.js\", \"types@>=4\": \"./index.d.ts\"}} 2`] = `

Message:
> 1 | {"exports": {"types@>=5": "./index.d.ts", "default": "./index.js", "types@>=4": "./index.d.ts"}}
    |                                                                    ^^^^^^^^^^^ Type conditions must come before runtime conditions in a conditions object.

`;

exports[`invalid(50): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": [], \"default\": \"./fallback.d.cts\"}}, \"import\": {\"node\": \"./node.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": [], "default": "./fallback.d.cts"}}, "import": {"node": "./node.js"}}}

`;

exports[`invalid(50): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": [], \"default\": \"./fallback.d.cts\"}}, \"import\": {\"node\": \"./node.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": [], "default": "./fallback.d.cts"}}, "import": {"node": "./node.js"}}}
    |                                                                                             ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(6): {\"exports\": {\"import\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}}} 1`] = `

[Input]
  1 | {"exports": {"import": {"default": "./index.js", "types": "./index.d.ts"}}}

`;

exports[`invalid(6): {\"exports\": {\"import\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}}} 2`] = `

Message:
> 1 | {"exports": {"import": {"default": "./index.js", "types": "./index.d.ts"}}}
    |                                                  ^^^^^^^ Type conditions must come before runtime conditions in a conditions object.

`;

exports[`invalid(7): {\"exports\": {\"types\": \"./index.js\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.js", "default": "./index.js"}}

`;

exports[`invalid(7): {\"exports\": {\"types\": \"./index.js\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.js", "default": "./index.js"}}
    |                       ^^^^^^^^^^^^ The \`types\` condition \`./index.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(8): {\"exports\": {\"types\": \"./index.ts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.ts", "default": "./index.mjs"}}

`;

exports[`invalid(8): {\"exports\": {\"types\": \"./index.ts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.ts", "default": "./index.mjs"}}
    |                       ^^^^^^^^^^^^ The \`types\` condition \`./index.ts\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(9): {\"exports\": {\"types\": \"./index.D.TS\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.D.TS", "default": "./index.js"}}

`;

exports[`invalid(9): {\"exports\": {\"types\": \"./index.D.TS\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.D.TS", "default": "./index.js"}}
    |                       ^^^^^^^^^^^^^^ The \`types\` condition \`./index.D.TS\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;
